--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/o-maklecovs/fyp#readme",
   "dependencies": {
     "express": "^4.17.2",
-    "express-handlebars": "^6.0.2"
+    "express-handlebars": "^6.0.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "jest": "^27.4.7",
