--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "jest": "^27.4.7",
