--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "validator": "^13.7.0"
   },
