Removed personal token from package.json file

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/o-maklecovs/fyp.git"
+    "url": "git+https://github.com/o-maklecovs/fyp.git"
   },
   "author": "",
   "license": "ISC",
